Added support for https PATCH requests